--- a/mainpage.html
+++ b/mainpage.html
@@ -19,7 +19,7 @@
         >
         <ul>
           <li class="main-nav_item__logo">
-            <a class="navLink" href="#232">Login</a>
+            <a class="navLink" href="loginPage.html">Login</a>
           </li>
         </ul>
       </nav>
