User Page / Update

--- a/userPage.html
+++ b/userPage.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ticket App</title>
     <link rel="stylesheet" href="Style/mainPageStyle.css" />
+    <link rel="stylesheet" href="style/userPageStyle.css">
     <script
       src="https://kit.fontawesome.com/a076d05399.js"
       crossorigin="anonymous"
@@ -18,8 +19,11 @@
           >Ticket App</a
         >
         <ul>
+            <li class="tickets">
+                <a class="navLink" href="#">Biletlerim</a>
+              </li>
           <li class="main-nav_item__logo">
-            <a class="navLink" href="loginPage.html">Giriş Yap</a>
+            <a class="navLink" href="loginPage.html">Çıkış Yap</a>
           </li>
         </ul>
       </nav>
@@ -35,7 +39,7 @@
         <div class="row">
           <h2>Biletler</h2>
         </div>
-        <table >
+        <table class="tableUser" >
             <tr >
                 <th class="tableF">Kalkış </th>
                 <th class="tableF">Varış</th>
@@ -44,13 +48,14 @@
             <tr>
                 <th class="tableS">Eskişehir</th>
                 <th class="tableS">Kütahya</th>
+                <th ><a class="buy" href="#">Satın Al</a></th>
             </tr>
         </table>
         </div>
       </article>
     </footer>
     <div class="arrow-up fa-solid fa-arrow-up">
-      <a class="arrow" href="mainpage.html">Yukarı Çık</a>
+      <a class="arrow" href="userPage.html">Yukarı Çık</a>
     </div>
   </body>
 </html>
