--- a/adminPage.html
+++ b/adminPage.html
@@ -131,12 +131,15 @@
                 <tr >
                     <th class="tableF">Kalkış </th>
                     <th class="tableF">Varış</th>
+                    <th class="tableF">Tarih</th>
+                    <th class="tableF">Satın Alan</th>
                     
                 </tr>
                 <tr>
                     <th class="tableS">Eskişehir</th>
                     <th class="tableS">Kütahya</th>
-                    
+                    <th class="tableS">26.01.2023</th>
+                    <th class="tableS">Yusuf Mücahit Solmaz</th>
                 </tr>
             </table>
             </div>
