--- a/mainpage.html
+++ b/mainpage.html
@@ -39,11 +39,14 @@
             <tr >
                 <th class="tableF">Kalkış </th>
                 <th class="tableF">Varış</th>
+                <th class="tableF">Tarih</th>
                 
             </tr>
             <tr>
                 <th class="tableS">Eskişehir</th>
                 <th class="tableS">Kütahya</th>
+                <th class="tableS">26.01.2023</th>
+
             </tr>
         </table>
         </div>
